add api create and get list comment in a post
