# controller/comment_services/handler/routes.go
@@ -6,8 +6,10 @@ import (
 )
 
 func RegisterCommentRoutes(rg *gin.RouterGroup, db *sqlx.DB) {
-	// eg := rg.Group("/comments")
-	// {
+	eg := rg.Group("posts/:post_id/comments")
+	{
+		eg.POST("", createCommentHandler(db))
+		eg.GET("", getAllCommentHandler(db))
 
-	// }
+	}
 }
